--- a/coding/main.html
+++ b/coding/main.html
@@ -286,62 +286,83 @@
                             </div>
                             <div class="box1-2">
                                 <img src="assets/img/motto.svg" alt="">
+                                <p>"저희 마라톤 커뮤니티에 오신 것을 환영합니다! <br>
+                                    우리는 장거리 레이싱에 대한 <br>
+                                    사랑을 공유하기 위해 헌신하는 열정적인 러너들의 모임입니다. </p>
+                            </div>
+                        </div>
+                        <div class="box2">
+                            <div class="box2-1">
+                                <img src="./assets/img/post1.png" alt="">
+                                <p>
+                                    당신이 경험이 풍부한 마라토너이든 <br>
+                                    막 시작한 마라토너이든,
+                                </p>
+                            </div>
+                            <div class="box2-2">
+                                <img src="./assets/img/post1.png" alt="">
+                                <p>
+                                    우리와 함께 목표를 향해 <br>
+                                    노력하는 동안 서로 지원, 조언 및 동지로 참여하세요.</p>
+                            </div>
+                            <div class="box2-3">
+                                <img src="./assets/img/post1.png" alt="">
+                                <p>웨이런미닝과 함께 달릴 준비 되셨나요?</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-    </div>
-    </main>
-    <!--//main -->
+        </main>
+        <!--//main -->
 
-    <footer id="footer" role="contentinfo">
-        <hr>
-        <div class="container">
-            <div class="footer__lnner">
-                <div class="left">
-                    <ul>
-                        <li><a href="#">멤버가입</a></li>
-                        <li><a href="#">고객센터</a>
-                            <ul>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">문의하기</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-
-                </div>
-                <div class="right">
-                    <div class="sns">
+        <footer id="footer" role="contentinfo">
+            <hr>
+            <div class="container">
+                <div class="footer__lnner">
+                    <div class="left">
                         <ul>
-                            <li><a href="#"><span class="blind">페이스북</span></a></li>
-                            <li><a href="#"><span class="blind">트위터</span></a></li>
-                            <li><a href="#"><span class="blind">인스타그램</span></a></li>
-                            <li><a href="#"><span class="blind">유튜브</span></a></li>
+                            <li><a href="#">멤버가입</a></li>
+                            <li><a href="#">고객센터</a>
+                                <ul>
+                                    <li><a href="#">공지사항</a></li>
+                                    <li><a href="#">문의하기</a></li>
+                                </ul>
+                            </li>
                         </ul>
 
                     </div>
-                </div>
-            </div>
+                    <div class="right">
+                        <div class="sns">
+                            <ul>
+                                <li><a href="#"><span class="blind">페이스북</span></a></li>
+                                <li><a href="#"><span class="blind">트위터</span></a></li>
+                                <li><a href="#"><span class="blind">인스타그램</span></a></li>
+                                <li><a href="#"><span class="blind">유튜브</span></a></li>
+                            </ul>
 
-            <div class="footer__bot">
-                <div class="left_bot">
-                    <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
-                </div>
-                <div class="right_bot">
-                    <ul>
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">위치 기반 서비스 약관</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
 
+                <div class="footer__bot">
+                    <div class="left_bot">
+                        <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
+                    </div>
+                    <div class="right_bot">
+                        <ul>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">위치 기반 서비스 약관</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <hr>
+                <p class="maile">nicejpm@naver.com</p>
             </div>
-            <hr>
-            <p class="maile">nicejpm@naver.com</p>
-        </div>
-    </footer>
-    <!-- //footer -->
+        </footer>
+        <!-- //footer -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
