--- a/coding/main.html
+++ b/coding/main.html
@@ -34,9 +34,9 @@
                     </div>
                     <nav class="nav">
                         <ul>
-                            <li><a href="#">대회일정</a>
+                            <li><a href="information.html">대회일정</a>
                                 <ul class="submenu">
-                                    <li><a href="#">전체</a></li>
+                                    <li><a href="information.html">전체</a></li>
                                     <li><a href="#">마라톤</a></li>
                                     <li><a href="#">플로깅</a></li>
                                 </ul>
