--- a/coding/main.html
+++ b/coding/main.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="header__inner">
                     <div class="logo">
-                        <a href="main.html"><img src="./assets/img/logo.svg" alt=""></a>
+                        <a href="main.html"><img src="./assets/ico/wrm_nav_rogo.svg" alt=""></a>
                     </div>
                     <nav class="nav">
                         <ul>
@@ -239,7 +239,7 @@
                         <p>마라톤 일정</p>
                         <div class="main__post">
                             <div class="post1">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content1">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -248,7 +248,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="post2">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content2">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -257,7 +257,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="post3">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content3">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -268,7 +268,7 @@
                         </div>
                         <div class="main__post2">
                             <div class="post4">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content4">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -277,7 +277,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="post5">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content5">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -286,7 +286,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="post6">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content6">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -309,7 +309,7 @@
                         <p>마라톤 순위</p>
                         <div class="main__rank__post">
                             <div class="rank1">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content1">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -318,7 +318,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="rank2">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content2">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
@@ -327,7 +327,7 @@
                                 <a href="#">웹사이트 바로가기</a>
                             </div>
                             <div class="rank3">
-                                <img src="./assets/img/post.png" alt="">
+                                <img src="./assets/img/post1.png" alt="">
                                 <div class="content3">
                                     <span class="tit">한강 나이트 워크 42Km</span>
                                     <span class="pip">15,000원</span>
