--- a/coding/main.html
+++ b/coding/main.html
@@ -431,20 +431,20 @@
                         </div>
                         <div class="box2">
                             <div class="box2-1">
-                                <img src="./assets/img/post1.png" alt="">
+                                <img src="./assets/img/motto1.png" alt="">
                                 <p>
                                     당신이 경험이 풍부한 마라토너이든 <br>
                                     막 시작한 마라토너이든,
                                 </p>
                             </div>
                             <div class="box2-2">
-                                <img src="./assets/img/post1.png" alt="">
+                                <img src="./assets/img/motto2.png" alt="">
                                 <p>
                                     우리와 함께 목표를 향해 <br>
                                     노력하는 동안 서로 지원, 조언 및 동지로 참여하세요.</p>
                             </div>
                             <div class="box2-3">
-                                <img src="./assets/img/post1.png" alt="">
+                                <img src="./assets/img/motto3.png" alt="">
                                 <p>웨이런미닝과 함께 달릴 준비 되셨나요?</p>
                             </div>
                         </div>
@@ -510,13 +510,13 @@
                                                 d="M193.571 97.7934C134.618 118.607 117.823 135.479 97.103 194.698C76.3827 135.479 59.5876 118.607 0.634766 97.7934C59.5876 76.9793 76.3827 60.1082 97.103 0.888672C117.823 60.1082 134.618 76.9793 193.571 97.7934Z"
                                                 fill="#FAF1E7" />
                                         </svg>
-
                                     </div>
                                 </div>
                             </a>
                         </div>
                     </div>
                 </div>
+                <!-- //main__goal -->
             </div>
         </main>
         <!--//main -->
