--- a/coding/checkIDPSW.html
+++ b/coding/checkIDPSW.html
@@ -60,8 +60,7 @@
                     </nav>
                     <div class="member">
                         <ul>
-                            <li><a href="login.html">로그인</a></li>
-                            <li><a href="signin.html">회원가입</a></li>
+                            <li><a href="logsign.html">로그인</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,20 +84,16 @@
                 <div class="wrapper">
                     <form id="register1" tabindex="500">
                         <h3>아이디 찾기</h3>
-                        <div class="name">
-                            <input type="text" name="">
-                            <label>Nickname</label>
-                        </div>
                         <div class="mail">
-                            <input type="mail" name="">
+                            <input type="mail" name="메일" placeholder="이메일 입력">
                             <label>Mail</label>
                         </div>
                         <div class="uid">
-                            <input type="text" name="">
+                            <input type="text" name="이름" placeholder="이름 입력">
                             <label>User Name</label>
                         </div>
                         <div class="passwd">
-                            <input type="password" name="">
+                            <input type="password" name="비밀번호" placeholder="비밀번호 입력">
                             <label>Password</label>
                         </div>
                         <div class="submit">
@@ -108,11 +103,11 @@
                     <form id="psw" tabindex="502">
                         <h3>비밀번호 찾기</h3>
                         <div class="mail">
-                            <input type="mail" name="">
+                            <input type="mail" name="메일" placeholder="이메일 입력">
                             <label>Mail</label>
                         </div>
                         <div class="uid">
-                            <input type="text" name="">
+                            <input type="text" name="이름" placeholder="이름 입력">
                             <label>User Name</label>
                         </div>
                         <div class="submit">
