--- a/coding/congrats.html
+++ b/coding/congrats.html
@@ -44,8 +44,7 @@
 
                     <div class="member">
                         <ul>
-                            <li><a href="login.html">로그인</a></li>
-                            <li><a href="signin.html">회원가입</a></li>
+                            <li><a href="logsign.html">로그인</a></li>
                         </ul>
                     </div>
 
