--- a/coding/copy.html
+++ b/coding/copy.html
@@ -42,8 +42,7 @@
                     </nav>
                     <div class="member">
                         <ul>
-                            <li><a href="login.html">로그인</a></li>
-                            <li><a href="signin.html">회원가입</a></li>
+                            <li><a href="logsign.html">로그인</a></li>
                         </ul>
                     </div>
                 </div>
