--- a/coding/newmain.html
+++ b/coding/newmain.html
@@ -89,8 +89,7 @@
                     </nav>
                     <div class="member">
                         <ul>
-                            <li><a href="login.html">로그인</a></li>
-                            <li><a href="register-1.html">회원가입</a></li>
+                            <li><a href="logsign.html">로그인</a></li>
                         </ul>
                     </div>
                 </div>
