--- a/coding/checkIDPSW.html
+++ b/coding/checkIDPSW.html
@@ -99,6 +99,11 @@
                         <div class="submit">
                             <button class="dark">확인</button>
                         </div>
+                        <div class="checks">
+                            <ul>
+                                <li><a href="logsign.html" class="line-under">아직 회원가입을 하지 않으셨다구요?</a></li>
+                            </ul>
+                        </div>
                     </form>
                     <form id="psw" tabindex="502">
                         <h3>비밀번호 찾기</h3>
@@ -189,7 +194,7 @@
         $(document).ready(function () {
             $(".veen .psw-btn button").click(function () {
                 $('.veen .wrapper').addClass('move');
-                $('.main_check').css('background', '#e0b722');
+                $('.main_check').css('background', '#9BABB8');
                 $(".veen .rgstr1-btn button").removeClass('active');
                 $(this).addClass('active');
 
